# Algorithm-Visualization

./: .gitignore  README.md
backend/: CMakeLists.txt  Makefile  main
backend/include/: checkers.hpp  crow_all.h  graph.hpp  link.hpp  minimax.hpp  policy-learning.hpp  position.hpp  simulated-annealing.hpp
backend/src/: main.cpp
backend/src/Minimax/: checkers.cpp  minimax.cpp
backend/src/Policy-Learning/: policy-learning.cpp
backend/src/Simulated-Annealing/: graph.cpp  link.cpp  position.cpp  simulated-annealing.cpp
frontend/: .eslintrc.json  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/assets/css/: main.css
frontend/src/assets/scripts/: geocode.js
frontend/src/components/: Checkers.vue  PathFinder.vue  TravelingSalesman.vue
frontend/src/components/sidebar/: SideBar.vue  SideBarLink.vue
frontend/src/router/: index.js
frontend/src/views/: CheckersView.vue  HomeView.vue  PathFinderView.vue  TravelingSalesmanView.vue
